--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			text-decoration: underline;
 		}
 		.combi{
-			text-decoration: combination;
+			text-decoration: overline underline;
 		}
 	</style>
 </head>
